# pr-assistant

./: .env.sample  README.md  function_app.py  main.py  pyproject.toml  requirements.txt
api/: GitHubAPI.py  github_api.py
azure/: __init__.py
azure_services/: __init__.py  openai.py  search.py
data/: create-code-convention.py  python-code-convention.md  upload-code-convention.py
pages/: home.py  pr_detail.py  repository_detail.py
prompts/: code-review.txt
service/: code_reviewer.py
test/: test-code-review.py
utils/: file_util.py
